fix(first-screen-menu-logo): fix logo shifth when page loading page

--- a/src/css/main/_first-screen.scss
+++ b/src/css/main/_first-screen.scss
@@ -117,7 +117,9 @@
 
   a img {
     @include transition;
+    width: 80px; // initial image width
   }
+  
 }
 
 .trap-element {
